--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://getbootstrap.com/docs/4.4/getting-started/webpack/#importing-compiled-css"></link>
     <title>React App</title>
+    <script src="node_modules/bootstrap/dist/css/bootstrap.css"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
